# qerasure

./: .gitignore  CMakeLists.txt  README.md  RSC_circuit_example.stim  pauli_test.json  pyproject.toml  virtual_circuit_builder.py
apps/: circuit_scratch.cc  conditional_timestep_from_zcheck_parity.py  ecr_each_step_no_spread_sweep.py  find_threshold_from_json.py  ler_sweep_superposed.py  ler_sweep_superposed_conditioned.py  qerasure_sims.ipynb  rail_calibration_stats.py  rail_inconsistency_posterior_bars.py  rail_inconsistency_trace_debug.py  rail_threshold_surface_sweep.py  run_sim.cpp  surface_batch_ler_sweep.py  test.ipynb  threshold_vs_q_sweep.py
bench/: bench_erasure_sim.cpp
benchmarks/: bench_erasure_and_lower.cpp  bench_erasure_sim.cpp  bench_stim_translation.cpp  bench_stream_decode.cpp  bench_stream_sampler.cpp  bench_surf_dem_profile.cpp  bench_surface_batch_decode.py  bench_surface_batch_decode_mp3.py  bench_virtual_decode.py  erasure_sampler_bench.circuit  erasure_sampler_bench.cpp  sweep_logical_error_rate.py
benchmarks/results/: surface_batch_decode_d15_r15_10k.json  surface_batch_decode_mp3_d15_r15_10k.json
build-bench-native/: CMakeCache.txt
build-circuit/: CMakeCache.txt
build-circuit-make/: CMakeCache.txt  Makefile  circuit_scratch  cmake_install.cmake
build-codex/: CMakeCache.txt
cmake/: CMakeLists.circuit.txt  CMakeLists.txt
codex_reports/: rail_resolved_decoder_implementation.md  refactor_workflow.md
docs/: erasure_model.md  gates.md  lowering.md  lowering_cpp.md  translation.md  translation_cpp.md
examples/: run_erasure_sim.cpp
include/qerasure/code/: code.h
include/qerasure/core/code/: rotated_surface_code.h
include/qerasure/core/lowering/: lowering.h
include/qerasure/core/noise/: noise_params.h
include/qerasure/core/sim/: erasure_simulator.h
include/qerasure/core/translation/: stim_translation.h
include/qerasure/noise/: noise.h
include/qerasure/simulators/: erasure_simulator.h
python/qerasure/: __init__.py  _bindings.py  benchmark_utils.py  circuit_model_utils.py  code_utils.py  lowering_utils.py  noise_utils.py  sim_utils.py  translation_utils.py  virtual_translation_utils.py  visualize.py
scripts/: build_all.sh  generate_surface_code_stim.py
src/bindings/: pybindings.cpp
src/code/: code.cpp
src/core/circuit/: circuit.cc  circuit.h  compile.cc  compile.h  erasure_model.h  instruction.h  pybind_circuit.cc  pybind_compile.cc  pybind_module.cc  pybind_rail_surface_compile.cc  rail_surface_compile.cc  rail_surface_compile.h
src/core/code/: rotated_surface_code.cpp  rotated_surface_code.h
src/core/decode/: hmm_decoder.cc  hmm_decoder.h  pybind_rail_surface_dem_builder.cc  pybind_surf_dem_builder.cc  pybind_surf_hmm_decoder.cc  rail_surface_dem_builder.cc  rail_surface_dem_builder.h  surf_dem_builder.cc  surf_dem_builder.h  surf_hmm_decoder.cc  surf_hmm_decoder.h
src/core/lowering/: lowering.cpp
src/core/model/: pauli_channel.h
src/core/noise/: noise_params.cpp
src/core/sim/: erasure_simulator.cpp
src/core/sim/internal/: fast_rng.h
src/core/simulator/: erasure_sampler.cc  erasure_sampler.h  fast_rng.h  injector.cc  injector.h  pybind_rail_calibration_sampler.cc  pybind_rail_stream_sampler.cc  pybind_stream_sampler.cc  rail_calibration_sampler.cc  rail_calibration_sampler.h  rail_stream_sampler.cc  rail_stream_sampler.h  sim_internal_utils.cc  sim_internal_utils.h  stream_sampler.cc  stream_sampler.h
src/core/translation/: common.cpp  common.h  logical.cpp  stim_translation.cpp  surf_gen.cpp  virtual.cpp  virtual_stim_translation.cpp
src/interop/python/: pybindings.cpp
src/noise/: noise.cpp
src/simulators/: erasure_simulator.cpp
tests/: benchmark_erasure_sim.cpp  benchmark_erasure_sim.sh  check_sweep_crossings.py  find_curve_crossings.py  hmm_decoder_stream_test.cpp  lowering_standard_test.cpp  mp_decode_failure_sweep.py  observable_flip_artifact_ancilla_no_spread_test.cpp  observable_flip_artifact_ancilla_test.cpp  observable_flip_artifact_test.cpp  python_rail_decode_failure_artifact_test.py  python_rail_vs_standard_logical_mismatch_artifact_test.py  python_stream_decode_pymatching_d9r9_test.py  python_surface_batch_decode_failure_artifact_test.py  python_surface_batch_decoder_test.py  rail_calibrated_threshold_sweep.py  rail_calibration_shot_sweep.py  rail_sampling_decoder_compare_sweep.py  rail_surface_path_test.cpp  rail_vs_standard_calibrated_sweep.py  run_statistical_convergence.sh  sampler_injector_trace_test.cpp  skippable_reweight_test.cpp  smoke_sim_test.cpp  statistical_convergence_test.cpp  stim_translation_test.cpp  stream_decode_dem_test.cpp  surf_dem_builder_trace_test.cpp  surf_gen_test.cpp  surf_hmm_decoder_trace_test.cpp  surf_post_clifford_pauli_test.cpp  surf_rounds_per_check_test.cpp  surf_tail_correction_test.cpp
